# site

./: .gitignore  README.md  RenderQuarto.sh  _quarto.yml  custom.scss  index.qmd  prompt.md
.github/workflows/: deploy.yml
docs/: index.html  listings.json  search.json  styles.css
docs/live/content/: welcome.html
docs/materials/: 0_materials.html  1_project_files.html
docs/materials/files/: README.md
docs/materials/files/datasets/: sample_student_performance.csv
docs/materials/files/fileSearcher/: main.py  pyproject.toml
docs/materials/files/myQR/: pyproject.toml
docs/materials/files/myQR/myqr/: __init__.py  file_ops.py  myqr_streamlit.py
docs/playground/: 00_playground.html  01_visualization.html  02_machine_learning.html  03_text_analysis.html  04_statistical_analysis.html  05_data_wrangling.html
docs/site_libs/bootstrap/: bootstrap-cbca5fe48b1f9954241d77e61ddb0a6c.min.css
live/: README.md  jupyter-lite.json  jupyter_lite_config.json
live/content/: welcome.ipynb
materials/: 0_materials.qmd  1_project_files.qmd  1_project_files.txt
materials/files/myQR/myqr/: main.py
materials/files/myQR/tests/: test_myqr.py
playground/: 00_playground.qmd  01_visualization.qmd  02_machine_learning.qmd  03_text_analysis.qmd  04_statistical_analysis.qmd  05_data_wrangling.qmd
